--- a/r2.bib
+++ b/r2.bib
@@ -75,3 +75,37 @@ number = {1},
 volume = {2}, 
 local-url = {file://localhost/Users/tommy/Google%20Drive/gmu/_dissertation/references/2021-01-30/Vol02_1936_1_Art05.pdf}
 }
+
+@book{mcfadden1977application,
+  title={An application of diagnostic tests for the independence from irrelevant alternatives property of the multinomial logit model},
+  author={McFadden, Daniel and Tye, William B and Train, Kenneth},
+  year={1977},
+  publisher={Institute of Transportation Studies, University of California}
+}
+
+@book{cox1989analysis,
+  title={Analysis of Binary Data},
+  author={Cox, DR and Snell, EJ},
+  volume={32},
+  year={1989},
+  publisher={CRC Press}
+}
+
+@article {hellinger1909new,
+  title = {New definition of the theory of quadratic forms of infinitely many different {\ "a} changes.},
+  author = {Hellinger, Ernst},
+  journal = {Journal f {\ "u} r pure and applied mathematics},
+  volume = {1909},
+  number = {136},
+  pages = {210--271},
+  year = {1909},
+  publisher = {De Gruyter}
+}
+
+@online{mvrsquared,
+  author = {Tommy Jones},
+  title = {mvrsquared},
+  year = 2020,
+  url = {https://CRAN.R-project.org/package=mvrsquared},
+  urldate = {2020-12-30}
+}
