--- a/r2.bib
+++ b/r2.bib
@@ -109,3 +109,19 @@ local-url = {file://localhost/Users/tommy/Google%20Drive/gmu/_dissertation/refer
   url = {https://CRAN.R-project.org/package=mvrsquared},
   urldate = {2020-12-30}
 }
+
+
+@book{rlang, 
+title = {{R: A Language and Environment for Statistical Computing}}, 
+author = {Team, R Core}, 
+url = {http://www.R-project.org/}, 
+address = {Vienna, Austria}, 
+year = {2013}
+}
+
+@misc{cran, 
+title = {{The Comprehensive R Archive Network}}, 
+author = {Team, The CRAN}, 
+url = {https://cran.r-project.org/}, 
+urldate = {2020-01-01}
+}
