change name per r journal requirements

--- a/r-squared-short.bib
+++ b/r-squared-short.bib
@@ -125,3 +125,134 @@ author = {Team, The CRAN},
 url = {https://cran.r-project.org/}, 
 urldate = {2020-01-01}
 }
+
+@article{blei2002lda, 
+title = {{Latent Dirichlet Allocation}}, 
+author = {Blei, David M. and Ng, Andrew Y. and Jordan, Michael I.}, 
+journal = {Journal of Machine Learning Research}, 
+volume = {3}, 
+local-url = {file://localhost/Users/tommy/Google%20Drive/gmu/_dissertation/references/download%202020-06-22/blei03a.pdf}, 
+year = {2003}
+}
+
+@misc{tidylda, 
+author = {Tommy Jones}, 
+editora = {Brendan Knapp}, 
+title = {{tidylda}}, 
+url = {https://github.com/TommyJones/tidylda}, 
+copyright = {MIT}, 
+year = {2020}
+}
+
+@article{tidytextjoss, 
+title = {{tidytext: Text Mining and Analysis Using Tidy Data Principles in R}}, 
+author = {Silge, Julia and Robinson, David}, 
+journal = {The Journal of Open Source Software}, 
+doi = {10.21105/joss.00037}, 
+pages = {37}, 
+number = {3}, 
+volume = {1}, 
+local-url = {file://localhost/Users/tommy/Google%20Drive/gmu/_dissertation/references/2021-01-01/joss.00037.pdf}, 
+year = {2016}
+}
+
+@article{tidyverse, 
+title = {{Welcome to the tidyverse}}, 
+author = {Wickham, Hadley and Averick, Mara and Bryan, Jennifer and Chang, Winston and McGowan, Lucy D'Agostino and François, Romain and Grolemund, Garrett and Hayes, Alex and Henry, Lionel and Hester, Jim and Kuhn, Max and Pedersen, Thomas Lin and Miller, Evan and Bache, Stephan
+ Milton and Müller, Kirill and Ooms, Jeroen and Robinson, David and Seidel, Dana Paige and Spinu, Vitalie and Takahashi, Kohske and Vaughan, Davis and Wilke, Claus and Woo, Kara and Yutani, Hiroaki}, 
+journal = {Journal of Open Source Software}, 
+doi = {10.21105/joss.01686}, 
+pages = {1686}, 
+number = {43}, 
+volume = {4}, 
+local-url = {file://localhost/Users/tommy/Google%20Drive/gmu/_dissertation/references/2021-01-01/10.21105.joss.01686.pdf}, 
+year = {2019}
+}
+
+
+@phdthesis{jones2023latent,
+  title={Latent Dirichlet Allocation for Natural Language Statistics},
+  author={Tommy Jones},
+  year={2023},
+  school={George Mason University}
+}
+
+
+@book{JohnsonWichern2007,
+ title 		= {Applied Multivariate Statistical Analysis},
+ author	= {R. A. Johnson and D. W. Wichern},
+ year	 	= {2007},
+ publisher 	= {Pearson Prentice Hall},
+ edition	= {6$^{\text{th}}$},
+ address 	= {Upper Saddle River, NJ, USA}
+}
+
+@article{Rudorfer1982,
+ author 	= {M. V. Rudorfer},
+ title 		= {Cardiovascular Changes and Plasma Drug Levels after Amitriptyline Overdose},
+ journal 	= {Journal of Toxicology-Clinical Toxicology},
+ volume 	= {19},
+ pages 	= {67--71},
+ year 	= {1982},
+ doi 		= {10.3109/15563658208990367}
+}
+
+@article{Morris2015,
+ author 	= {J. S. Morris},
+ title 		= {Functional Regression},
+ journal 	= {Annual Review of Statistics and Its Application},
+ volume 	= {2},
+ pages 	= {321--359},
+ year 	= {2015},
+ doi 		= {10.1146/annurev-statistics-010814-020413},
+}
+
+@article{Meyer2023,
+ author 	= {M. J. Meyer},
+ title 		= {Advances in estimation and inference for historical functional linear models},
+ journal 	= {WIREs Computational Statistics},
+ pages 	= {e1627},
+ doi 		= {10.1002/wics.1627},
+ year 	= {2023}
+}
+
+@Article{Malfait2003,
+ author	= {N. Malfait and J. O. Ramsay},
+ title		= {The historical functional linear model},
+ journal	= {The Canadian Journal of Statistics},
+ volume     = {31},
+ pages 	= {115--128},
+ doi		= {10.2307/3316063},
+ year		= {2003}
+}
+
+@Article{Harezlak2007,
+ author	= {J. Harezlak and B. A. Coull and N. M. Laird and S. R. Magari and D. C. Christiani},
+ title		= {Penalized solutions to functional regression problems},
+ journal	= {Computational Statistics \& Data Analysis},
+ volume     = {51},
+ pages 	= {4911--4925},
+ doi		= {10.1016/j.csda.2006.09.034},
+ year		= {2007}
+}
+
+@Article{Meyer2015,
+ author	= {M. J. Meyer and B. A. Coull and F. Versace and P. Cinciripini and J. S. Morris},
+ title		= {Bayesian function-on-function regression for multi-level functional data},
+ journal	= {Biometrics},
+ volume	= {71},
+ pages	= {563--574},
+ doi 		= {10.1111/biom.12299},
+ year		= {2015}
+}
+
+@Article{rcppthread,
+ author	= {Thomas Nagler},
+ title		= {R-Friendly Multi-Threading in C++},
+ journal	= {Journal of Statistical Software},
+ volume	= {97(1)},
+ pages	= {1--18},
+ doi 		= {10.18637},
+ year		= {2021}
+}
+
